--- a/package.json
+++ b/package.json
@@ -31,7 +31,6 @@
 		"lighthouse": "^9.6.7",
 		"prettier": "^2.6.2",
 		"prettier-plugin-svelte": "^2.7.0",
-		"prisma": "^4.5.0",
 		"stripe": "^10.13.0",
 		"svelte": "^3.44.0",
 		"svelte-awesome": "^3.0.0",
@@ -39,7 +38,7 @@
 		"svelte-particles": "^2.5.1",
 		"svelte-preprocess": "^4.10.6",
 		"tslib": "^2.3.1",
-		"tsparticles": "^2.5.1",
+		"tsparticles-slim": "^2.5.1",
 		"typescript": "^4.7.4",
 		"vite": "^3.1.0"
 	},
