--- a/package.json
+++ b/package.json
@@ -38,9 +38,11 @@
 		"svelte-particles": "^2.5.1",
 		"svelte-preprocess": "^4.10.6",
 		"tslib": "^2.3.1",
-		"tsparticles-slim": "^2.5.1",
 		"typescript": "^4.7.4",
 		"vite": "^3.1.0"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"tsparticles-engine": "^2.5.0"
+	}
 }
