--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
 		"format": "prettier --plugin-search-dir . --write ."
 	},
 	"devDependencies": {
-		"@fortawesome/free-regular-svg-icons": "^6.2.0",
 		"@prisma/client": "^4.5.0",
 		"@stripe/stripe-js": "^1.41.0",
 		"@sveltejs/adapter-auto": "next",
@@ -34,16 +33,11 @@
 		"prettier-plugin-svelte": "^2.7.0",
 		"stripe": "^10.13.0",
 		"svelte": "^3.44.0",
-		"svelte-awesome": "^3.0.0",
 		"svelte-check": "^2.7.1",
-		"svelte-particles": "^2.5.1",
 		"svelte-preprocess": "^4.10.6",
 		"tslib": "^2.3.1",
 		"typescript": "^4.7.4",
 		"vite": "^3.1.0"
 	},
-	"type": "module",
-	"dependencies": {
-		"tsparticles-engine": "^2.5.0"
-	}
+	"type": "module"
 }
