--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 		"lighthouse": "^9.6.7",
 		"prettier": "^2.6.2",
 		"prettier-plugin-svelte": "^2.7.0",
+		"prisma": "^4.5.0",
 		"stripe": "^10.13.0",
 		"svelte": "^3.44.0",
 		"svelte-check": "^2.7.1",
