--- a/package.json
+++ b/package.json
@@ -40,5 +40,8 @@
 		"typescript": "^4.7.4",
 		"vite": "^3.1.0"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"@sveltejs/adapter-vercel": "1.0.0-next.81"
+	}
 }
