--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
 		"ioredis": "^5.2.3",
 		"jsonwebtoken": "^8.5.1",
 		"lighthouse": "^9.6.7",
+		"postcss": "^8.4.18",
+		"postcss-load-config": "^4.0.1",
 		"prettier": "^2.6.2",
 		"prettier-plugin-svelte": "^2.7.0",
 		"prisma": "^4.5.0",
@@ -42,6 +44,7 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"@sveltejs/adapter-vercel": "1.0.0-next.81"
+		"@sveltejs/adapter-vercel": "1.0.0-next.81",
+		"autoprefixer": "^10.4.13"
 	}
 }
