--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
 		"@types/jsonwebtoken": "^8.5.9",
 		"@typescript-eslint/eslint-plugin": "^5.27.0",
 		"@typescript-eslint/parser": "^5.27.0",
-		"@zerodevx/svelte-toast": "^0.8.0",
 		"esbuild": "^0.15.13",
 		"eslint": "^8.16.0",
 		"eslint-config-prettier": "^8.3.0",
@@ -45,6 +44,7 @@
 	"type": "module",
 	"dependencies": {
 		"@sveltejs/adapter-vercel": "1.0.0-next.81",
+		"@zerodevx/svelte-toast": "0.7.2",
 		"autoprefixer": "^10.4.13"
 	}
 }
