--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"private": true,
 	"scripts": {
 		"dev": "vite dev",
-		"build": "prisma generate && vite build",
+		"build": "prisma migrate deploy && vite build",
 		"preview": "vite preview",
 		"lighthouse": "lighthouse http://localhost:5173 --view --output-path='./lighthouse/report.html'",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
