--- a/package.json
+++ b/package.json
@@ -16,11 +16,14 @@
 		"@prisma/client": "^4.5.0",
 		"@stripe/stripe-js": "^1.41.0",
 		"@sveltejs/adapter-auto": "next",
+		"@sveltejs/adapter-vercel": "1.0.0-next.81",
 		"@sveltejs/kit": "next",
 		"@types/ioredis": "^4.28.10",
 		"@types/jsonwebtoken": "^8.5.9",
 		"@typescript-eslint/eslint-plugin": "^5.27.0",
 		"@typescript-eslint/parser": "^5.27.0",
+		"@zerodevx/svelte-toast": "0.7.2",
+		"autoprefixer": "^10.4.13",
 		"esbuild": "^0.15.13",
 		"eslint": "^8.16.0",
 		"eslint-config-prettier": "^8.3.0",
@@ -36,18 +39,14 @@
 		"stripe": "^10.13.0",
 		"svelte": "^3.44.0",
 		"svelte-check": "^2.7.1",
+		"svelte-fa": "^3.0.3",
+		"svelte-particles": "^2.5.1",
 		"svelte-preprocess": "^4.10.6",
 		"tslib": "^2.3.1",
+		"tsparticles-engine": "^2.5.0",
+		"tsparticles-slim": "^2.5.1",
 		"typescript": "^4.7.4",
 		"vite": "^3.1.0"
 	},
-	"type": "module",
-	"dependencies": {
-		"@sveltejs/adapter-vercel": "1.0.0-next.81",
-		"@zerodevx/svelte-toast": "0.7.2",
-		"autoprefixer": "^10.4.13",
-		"svelte-particles": "^2.5.1",
-		"tsparticles-engine": "^2.5.0",
-		"tsparticles-slim": "^2.5.1"
-	}
+	"type": "module"
 }
