--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
 		"format": "prettier --plugin-search-dir . --write ."
 	},
 	"devDependencies": {
+		"@fortawesome/free-regular-svg-icons": "^6.2.0",
+		"@fortawesome/free-solid-svg-icons": "^6.2.0",
 		"@prisma/client": "^4.5.0",
 		"@stripe/stripe-js": "^1.41.0",
 		"@sveltejs/adapter-auto": "next",
@@ -39,6 +41,7 @@
 		"stripe": "^10.13.0",
 		"svelte": "^3.44.0",
 		"svelte-check": "^2.7.1",
+		"svelte-fa": "^3.0.3",
 		"svelte-particles": "^2.5.1",
 		"svelte-preprocess": "^4.10.6",
 		"tslib": "^2.3.1",
