--- a/package.json
+++ b/package.json
@@ -46,7 +46,16 @@
 		"svelte-preprocess": "^4.10.6",
 		"tslib": "^2.3.1",
 		"tsparticles-engine": "^2.5.0",
-		"tsparticles-slim": "^2.5.1",
+		"tsparticles-move-base": "^2.5.1",
+		"tsparticles-particles.js": "^2.5.1",
+		"tsparticles-shape-circle": "^2.5.1",
+		"tsparticles-updater-angle": "^2.5.1",
+		"tsparticles-updater-color": "^2.5.1",
+		"tsparticles-updater-life": "^2.5.1",
+		"tsparticles-updater-opacity": "^2.5.1",
+		"tsparticles-updater-out-modes": "^2.5.1",
+		"tsparticles-updater-size": "^2.5.1",
+		"tsparticles-updater-stroke-color": "^2.5.1",
 		"typescript": "^4.7.4",
 		"vite": "^3.1.0"
 	},
