--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
 		"@types/jsonwebtoken": "^8.5.9",
 		"@typescript-eslint/eslint-plugin": "^5.27.0",
 		"@typescript-eslint/parser": "^5.27.0",
-		"@zerodevx/svelte-toast": "0.7.2",
+		"@zerodevx/svelte-toast": "^0.8.1",
 		"autoprefixer": "^10.4.13",
 		"esbuild": "^0.15.13",
 		"eslint": "^8.16.0",
